Add multi-language support and improve UI layout
Implemented multi-language support using Laravel's localization and updated the user interface layout for company quick view. Enhanced verification status visibility by including a styled verification badge. The adjustments aim to improve overall user experience and accommodate users from different language backgrounds.

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -35,16 +35,16 @@
     "Hello": "Zdravo",
     "Welcome to your dashboard. Soon, you will have access to features such as analytics, job posting overviews, and many additional capabilities. These enhancements are currently under development and will be available shortly.": "Dobrodošli na vaši nadzorni plošči. Kmalu boste imeli dostop do funkcij, kot so analitika, pregledi objav delovnih mest in številne dodatne zmogljivosti. Te izboljšave so trenutno v razvoju in bodo kmalu na voljo.",
     "For now, you may navigate to your jobs screen, by clicking the JOBS button on your left side navigation menu.": "Zaenkrat se lahko pomaknete na zaslon s svojimi opravili tako, da kliknete gumb JOBS v meniju za krmarjenje na levi strani.",
-    "[Business] Dashboard": "[Posel] Nadzorna plošča",
-    "Activate job listing": "Aktivirajte seznam delovnih mest",
+    "[Business] Dashboard": "[Poslovno] Nadzorna plošča",
+    "Activate job listing": "Aktivirajte delovno mesto",
     "Edit this job": "Uredite to delovno mesto",
     "Job posted at": "Delovno mesto objavljeno na",
     "Job post expires at": "Objava tega delovnega mesta poteče ob",
-    "[Business] Jobs": "[Posel] Delovna mesta",
+    "[Business] Jobs": "[Poslovno] Delovna mesta",
     "Title": "Naziv",
     "Yearly salary": "Letna plača",
     "Status": "Status",
-    "[Business] Create a job": "[Posel] Ustvarite objavo",
+    "[Business] Create a job": "[Poslovno] Ustvarite objavo",
     "Create a new job": "Ustvari novo objavo",
     "Job Title": "Naziv delovnega mesta",
     "Customer service representative": "Predstavnik za stike s strankami",
@@ -228,5 +228,15 @@
     "See more details": "Več podrobnosti",
     "Close": "Zapri",
     "Your email has been verified!": "Vaš e-poštni naslov je preverjen!",
-    "You may now login and start using everything JobHuntr has to offer": "Zdaj se lahko prijavite in začnete uporabljati vse, kar ponuja JobHuntr"
+    "You may now login and start using everything JobHuntr has to offer": "Zdaj se lahko prijavite in začnete uporabljati vse, kar ponuja JobHuntr",
+    "Welcome to JobHuntr": "Dobrodošli na portalu JobHuntr",
+    "We are happy that you decided to join us. Please click the button below, to finalize your account and verify your email!": "Veseli nas, da ste se nam odločili pridružiti. Kliknite spodnji gumb, da dokončate svoj račun in potrdite svoj e-poštni naslov!",
+    "Verify now!": "Potrdi zdaj!",
+    "Thank you for using JobHuntr!": "Hvala, ker uporabljate portal JobHuntr!",
+    "Published": "Objavljeno",
+    "[Business] Log in": "[Poslovno] Prijava",
+    "Your company is verified!": "Vaše podjetje je preverjeno!",
+    "Your company is still being verified. We usually verify your company within 24 hours of registering.": "Vaše podjetje je še v postopku preverjanja. Vaše podjetje običajno preverimo v 24 urah po registraciji.",
+    "Verified": "Preverjeno",
+    "Unverified": "Nepreverjeno"
 }
