Remove 'preferred gender' field and add job cancellation feature
The 'preferred gender' field was removed from the job listings form and database schema due to equality considerations. Also, a job cancellation feature was added which allows employers to directly cancel active job posts from the job details page. Localization was improved in the Jobs Overview section as well.

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -238,5 +238,7 @@
     "Your company is verified!": "Vaše podjetje je preverjeno!",
     "Your company is still being verified. We usually verify your company within 24 hours of registering.": "Vaše podjetje je še v postopku preverjanja. Vaše podjetje običajno preverimo v 24 urah po registraciji.",
     "Verified": "Preverjeno",
-    "Unverified": "Nepreverjeno"
+    "Unverified": "Nepreverjeno",
+    "Jobs overview": "Pregled delovnih mest",
+    "List of all of your jobs": "Seznam vseh vaših delovnih mest"
 }
