Update job details and search page layouts, and translate content
The layout for both job details and job search pages have been updated for better usability. The job details page now spans the entire width, and CSS tweaks have been added for better responsiveness. Additionally, translations in the sl.json file have been updated to improve localization.

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -34,7 +34,7 @@
     "Update": "Posodobitev",
     "Hello": "Zdravo",
     "Welcome to your dashboard. Soon, you will have access to features such as analytics, job posting overviews, and many additional capabilities. These enhancements are currently under development and will be available shortly.": "Dobrodošli na vaši nadzorni plošči. Kmalu boste imeli dostop do funkcij, kot so analitika, pregledi objav delovnih mest in številne dodatne zmogljivosti. Te izboljšave so trenutno v razvoju in bodo kmalu na voljo.",
-    "For now, you may navigate to your jobs screen, by clicking the JOBS button on your left side navigation menu.": "Zaenkrat se lahko pomaknete na zaslon s svojimi opravili tako, da kliknete gumb JOBS v meniju za krmarjenje na levi strani.",
+    "For now, you may navigate to your jobs screen, by clicking the JOBS button on your left side navigation menu.": "Zaenkrat se lahko pomaknete na zaslon s svojimi delovnimi mesti tako, da kliknete gumb DELOVNA MESTA v meniju za krmarjenje na levi strani.",
     "[Business] Dashboard": "[Poslovno] Nadzorna plošča",
     "Activate job listing": "Aktivirajte delovno mesto",
     "Edit this job": "Uredite to delovno mesto",
