Add TestController and route for non-production environments
A new TestController has been created with a test function to handle notifications. This controller is bound to a new route '/test', but only if the application is not running in a production environment. Additionally, a small language correction has been made in lang/sl.json file.

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -230,7 +230,7 @@
     "Your email has been verified!": "Vaš e-poštni naslov je preverjen!",
     "You may now login and start using everything JobHuntr has to offer": "Zdaj se lahko prijavite in začnete uporabljati vse, kar ponuja JobHuntr",
     "Welcome to JobHuntr": "Dobrodošli na portalu JobHuntr",
-    "We are happy that you decided to join us. Please click the button below, to finalize your account and verify your email!": "Veseli nas, da ste se nam odločili pridružiti. Kliknite spodnji gumb, da dokončate svoj račun in potrdite svoj e-poštni naslov!",
+    "We are happy that you decided to join us. Please click the button below, to finalize your account and verify your email!": "Veseli nas, da ste se nam pridružiti. Kliknite spodnji gumb, da dokončate svoj račun in potrdite svoj e-poštni naslov!",
     "Verify now!": "Potrdi zdaj!",
     "Thank you for using JobHuntr!": "Hvala, ker uporabljate portal JobHuntr!",
     "Published": "Objavljeno",
