--- a/lang/sl.json
+++ b/lang/sl.json
@@ -129,14 +129,14 @@
     "Offering work?": "Nudite zaposlitev?",
     "We're the ideal platform for posting job opportunities": "JobHuntr je idealna platforma za objavo zaposlitvenih priložnosti",
     "The JobHuntr Advantage": "Prednosti JobHuntr-ja",
-    "Why you'll love hiring with us": "Zakaj se boste radi zaposlili preko nas",
+    "Why you'll love hiring with us": "Zakaj se boste radi zaposljevali preko nas",
     "Verified Companies": "Preverjena podjetja",
     "At JobHuntr, we ensure the authenticity of every job listing by verifying each company before they can post. This builds trust with potential applicants and increases the quality of responses to your job ads.": "Pri JobHuntr zagotavljamo legitimnost vsakega delovnega mesta, saj je preverjen obstoj in delovanje vsakega ponudnika delovnega mesta. To gradi zaupanje potencialnih kandidatov in povečuje količino odzivov na vašo objavo.",
     "Modern Solutions for Efficient Hiring": "Sodobne rešitve za učinkovito zaposlovanje",
     "JobHuntr offers a sleek, user-friendly platform that modernizes the hiring process. Our upcoming features, including contract building and applicant management, streamline recruitment, saving you time and resources.": "JobHuntr ponuja elegantno, uporabniku prijazno platformo, ki posodablja postopek zaposlovanja. Naše prihajajoče funkcije poenostavljajo zaposlovanje ter vam tako prihranijo veliko časa.",
     "Future-Ready with AI-Driven Tools": "Pripravljen na prihodnost z orodji, ki jih poganja AI",
     "JobHuntr is designed with the future in mind. Our platform will soon include AI-powered tools to help you generate job details effortlessly, giving you complete control while making it easier to attract the right talent quickly and efficiently.": "JobHuntr je zasnovan z mislijo na prihodnost. Naša platforma bo kmalu vključevala orodja, ki jih poganja AI, ki vam bodo pomagala brez napora ustvariti podrobnosti o delovnem mestu, kar vam bo omogočilo popoln nadzor, hkrati pa bo olajšalo hitro in učinkovito privabljanje pravih talentov.",
-    "Why JobHuntr Rocks!": "Zakaj JobHuntr vodilni?",
+    "Why JobHuntr Rocks!": "Zakaj je JobHuntr vodilni?",
     "Discover the benefits of choosing us": "Odkrijte prednosti izbire JobHuntr-ja",
     "Free to Start, Fair Pricing Always": "Brezplačen začetek, vedno poštene cene",
     "We are committed to making our platform accessible. Currently, JobHuntr is free to use, and even when we introduce pricing, we guarantee that our fees will remain fair and competitive, ensuring value for all users.": "Zavezani smo k temu, da bo naša platforma dostopna. Trenutno je JobHuntr brezplačen za uporabo. Ob uvedbi plačilnih pogojev vam zagotavljamo, da bodo naši honorarji ostali pošteni in konkurenčni, kar bo zagotovilo uporabo vsem naročnikom.",
@@ -159,7 +159,7 @@
     "Loading...": "Nalagam...",
     "No jobs match your filters!": "Nobena zaposlitev ne ustreza izbranim filtrom!",
     "Back": "Nazaj",
-    "Submit": "Predloži",
+    "Submit": "Pošlji",
     "Next": "Naprej",
     "Account created!": "Račun ustvarjen!",
     "We are happy that you decided to join us!": "Veseli nas, da ste se nam pridružili!",
@@ -265,5 +265,18 @@
     "Cookies": "Piškotki",
     "We use cookies to ensure our site functions properly, gather usage data, remember your preferences.": "Piškotke uporabljamo, da zagotovimo pravilno delovanje naše strani, zbiramo podatke o uporabi in si zapomnimo vaše nastavitve.",
     "Agree & close": "Strinjam se in zapri",
-    "More information": "Več informacij"
+    "More information": "Več informacij",
+    "Best regards, JobHuntr": "Lep pozdrav, JobHuntr",
+    "An email was sent to provided address, if an account was found!": "Če je bil račun najden, je bilo na navedeni naslov poslano e-poštno sporočilo!",
+    "Forgotten password?": "Pozabljeno geslo?",
+    "Reset your password": "Ponastavitev gesla",
+    "Oopsie": "Upsi",
+    "It seems that you have requested to change your password.": "Zdi se, da ste zaprosili za spremembo gesla.",
+    "If that is not the case, please just ignore this email.": "V nasprotnem primeru tega e-poštnega sporočila ne upoštevajte.",
+    "Password reset link has expired.": "Povezava za ponastavitev gesla je potekla.",
+    "Back to login": "Nazaj na prijavo",
+    "Let's get you back on track": "Naj vas vrnemo na pravo pot",
+    "Choose a new password": "Izberite novo geslo",
+    "Company login": "Prijava za podjetja",
+    "Your password was successfully reset, you can now login to your account": "Vaše geslo je bilo uspešno ponastavljeno, zdaj se lahko prijavite v svoj račun"
 }
