Rename 'work_areas' table to 'sectors' and update related code
The commit includes a migration file to rename the 'work_areas' table to 'sectors'. It also includes updates to the codebase to replace 'work_area' with 'sector' where necessary. This includes updates to model associations, API endpoints, translations, and more for consistency and to avoid breaking the application. The refactor ensures that the application logic aligns with the new 'sectors' terminology.

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,9 +11,9 @@
     "Employment Type": "Employment Type",
     "Full time": "Full time",
     "Part time": "Half time",
-    "Work Areas": "Work areas",
+    "Sectors": "Sectors",
     "Work Fields": "Work fields",
-    "Please, select the work area before selecting work field.": "Please, select the work area before selecting the workplace.",
+    "Please, select the sector before selecting work field.": "Please, select the sector before selecting the workplace.",
     "No results found": "No results found",
     "Welcome": "Welcome",
     "Bachelor's degree": "Diploma",
@@ -218,7 +218,7 @@
     "Need help?": "Need help?",
     "Employment type": "Employment type",
     "Salary": "Salary",
-    "Work area": "Work area",
+    "Sector": "Sector",
     "Work field": "Work field",
     "Work Location": "Work location",
     "Description": "Description",
