--- a/lang/sl.json
+++ b/lang/sl.json
@@ -11,9 +11,9 @@
     "Employment Type": "Tip zaposlitve",
     "Full time": "Polni delovni čas",
     "Part time": "Polovični delovni čas",
-    "Work Areas": "Delovna področja",
+    "Sectors": "Panoge",
     "Work Fields": "Delovna področja",
-    "Please, select the work area before selecting work field.": "Prosimo, izberite delovno področje pred izbiro delovnega mesta.",
+    "Please, select the sector before selecting work field.": "Prosimo, izberite panogo pred izbiro delovnega področja.",
     "No results found": "Ni najdenih rezultatov",
     "Welcome": "Dobrodošli",
     "Bachelor's degree": "Diploma",
@@ -218,7 +218,7 @@
     "Need help?": "Potrebuješ pomoč?",
     "Employment type": "Tip zaposlitve",
     "Salary": "Plača",
-    "Work area": "Delovno območje",
+    "Sector": "Panoga",
     "Work field": "Delovno področje",
     "Work Location": "Lokacija dela",
     "Description": "Opis",
