Rename 'WorkArea' to 'Sector' and adjust dependencies
The commit encompasses renaming 'WorkArea' related classes to 'Sector'. Changes have been ensured across models, resources, controllers, and react components. It also includes the necessary translations. The code has been effectively modified to accommodate this refactoring. Subsequently, methods, variables, and arguments that referred to 'workArea' have been adjusted to correspond to 'Sector'.

--- a/lang/en.json
+++ b/lang/en.json
@@ -420,5 +420,6 @@
     "Library Science": "Library Science",
     "Cosmetology": "Cosmetology",
     "Pest Control": "Pest Control",
-    "Property Management": "Property Management"
+    "Property Management": "Property Management",
+    "Not important": "Not important"
 }
