Refactor address handling and integrate Google Location Select
Reorganized address fields into a nested structure and updated related components. Introduced GoogleLocationSelect component for better address selection, and adjusted forms and validation to accommodate this new structure.

--- a/lang/en.json
+++ b/lang/en.json
@@ -421,5 +421,6 @@
     "Cosmetology": "Cosmetology",
     "Pest Control": "Pest Control",
     "Property Management": "Property Management",
-    "Not important": "Not important"
+    "Not important": "Not important",
+    "Start typing and choose your location": "Start typing and choose your location"
 }
