--- a/lang/sl.json
+++ b/lang/sl.json
@@ -421,5 +421,6 @@
     "Cosmetology": "Kozmetologija",
     "Pest Control": "Zatiranje škodljivcev",
     "Property Management": "Upravljanje nepremičnin",
-    "Not important": "Ni pomembno"
+    "Not important": "Ni pomembno",
+    "Start typing and choose your location": "Začnite tipkati in izberite svojo lokacijo"
 }
