Remove sector-related code and update job functionalities
Removed all Sector related code across models, controllers, and views to streamline the job functionalities. Adjusted APIs, factories, and TypeScript files to reflect the removal. Updated TS target in `tsconfig.json` to "esnext" for compatibility.

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -11,9 +11,7 @@
     "Employment Type": "Tip zaposlitve",
     "Full time": "Polni delovni čas",
     "Part time": "Polovični delovni čas",
-    "Sectors": "Panoge",
-    "Work Fields": "Delovna področja",
-    "Please, select the sector before selecting work field.": "Prosimo, izberite panogo pred izbiro delovnega področja.",
+    "Work Fields": "Področje dela",
     "No results found": "Ni najdenih rezultatov",
     "Welcome": "Dobrodošli",
     "Bachelor's degree": "Diploma",
@@ -218,8 +216,7 @@
     "Need help?": "Potrebuješ pomoč?",
     "Employment type": "Tip zaposlitve",
     "Salary": "Plača",
-    "Sector": "Panoga",
-    "Work field": "Delovno področje",
+    "Work field": "Področje dela",
     "Work Location": "Lokacija dela",
     "Description": "Opis",
     "Job application email": "E-pošta prijave za delo",
