Update job form fields and integrate new TipTap features
Refactored job form to include detailed sections for expectations, benefits, and assignments. Added support for salary range and hourly rate payment methods. Integrated new TipTap extensions to enhance text input functionality.

--- a/lang/sl.json
+++ b/lang/sl.json
@@ -8,7 +8,7 @@
     "Location": "Lokacija",
     "Remote": "Na daljavo",
     "Hybrid": "Hibridno",
-    "Employment Type": "Tip zaposlitve",
+    "Employment Type": "Oblika zaposlitve",
     "Full time": "Polni delovni čas",
     "Part time": "Polovični delovni čas",
     "Work Fields": "Področje dela",
@@ -48,6 +48,8 @@
     "Customer service representative": "Predstavnik za stike s strankami",
     "Full-Time": "Polni delovni čas",
     "Part-Time": "Krajši delovni čas",
+    "Student work": "Študentsko delo",
+    "By contract": "Po pogodbi",
     "Job description": "Opis delovnega mesta",
     "Handle customer complaints, provide appropriate solutions and alternatives...": "Obravnava pritožb, zagotavljanje ustreznih rešitev in alternativ...",
     "Work location": "Lokacija dela",
@@ -214,7 +216,7 @@
     "See available jobs": "Oglej si prosta delovna mesta",
     "Contact us": "Kontaktiraj nas",
     "Need help?": "Potrebuješ pomoč?",
-    "Employment type": "Tip zaposlitve",
+    "Employment type": "Oblika zaposlitve",
     "Salary": "Plača",
     "Work field": "Področje dela",
     "Work Location": "Lokacija dela",
@@ -233,7 +235,7 @@
     "Published": "Objavljeno",
     "[Business] Log in": "[Poslovno] Prijava",
     "Your company is verified!": "Vaše podjetje je preverjeno!",
-    "Your company is still being verified. We usually verify your company within 24 hours of registering.": "Vaše podjetje je še v postopku preverjanja. Vaše podjetje običajno preverimo v 24 urah po registraciji.",
+    "Your company is still being verified. We usually verify your company within 24 hours of registering.": "Vaše podjetje je še v postopku preverjanja. Vaše podjetje običajno preverimo v roku 24 ur po uspešni registraciji.",
     "Verified": "Preverjeno",
     "Unverified": "Nepreverjeno",
     "Jobs overview": "Pregled delovnih mest",
@@ -421,5 +423,25 @@
     "Not important": "Ni pomembno",
     "Start typing and choose your location": "Začnite tipkati in izberite svojo lokacijo",
     "No options": "Ni zadetkov",
-    "Searching": "Iskanje"
+    "Searching": "Iskanje",
+    "Short company introduction": "Kratka predstavitev podjetja",
+    "Provide a brief introduction to your company and the role. (max. 250 characters)": "Podajte kratek uvod o vašem podjetju in razpisanem delovnem mestu. (največ 250 znakov)",
+    "We are a fast-growing tech company looking for talented individuals": "Smo hitro rastoče tehnološko podjetje, ki išče talentirane posameznike",
+    "Main Tasks": "Glavne naloge",
+    "Describe the main tasks and responsibilities for this position": "Opišite glavne naloge in odgovornosti za to delovno mesto",
+    "Managing projects, coordinating teams, developing strategies": "Vodenje projektov, usklajevanje ekip, razvoj strategij",
+    "What We Offer": "Kaj nudimo",
+    "Highlight the key benefits and perks offered by your company": "Izpostavite ključne ugodnosti in bonitete, ki jih ponuja vaše podjetje",
+    "Health insurance, flexible hours, professional development": "Možnost osebnega in profesionalnega razvoja, fleksibilen delovni čas, redno in stimulativno plačilo",
+    "What We Expect": "Kaj pričakujemo",
+    "Outline the qualifications and skills required for this role": "Navedite zahteve in spretnosti, ki jih pričakujete za to vlogo",
+    "3+ years of experience, excellent communication skills": "3+ leta izkušenj, odlične komunikacijske veščine",
+    "Salary Range (From)": "Razpon plače (od)",
+    "Salary Range (To)": "Razpon plače (do)",
+    "All salary figures should be provided as a monthly amount": "Vsi zneski plač morajo biti navedeni kot bruto mesečni znesek",
+    "All salary figures should be provided as a gross amount": "Vsi zneski plačil morajo biti navedeni kot bruto znesek",
+    "Only verified companies can post jobs on JobHuntr. Please wait until we verify you.": "Samo preverjena podjetja lahko objavljajo delovna mesta na portalu JobHuntr. Prosimo, počakajte, da vas preverimo.",
+    "Method of payment": "Način plačila",
+    "Save": "Shrani",
+    "Hourly rate": "Urna postavka"
 }
