--- a/lang/en.json
+++ b/lang/en.json
@@ -48,6 +48,8 @@
     "Customer service representative": "Representative for contacts with customers",
     "Full-Time": "Full-time",
     "Part-Time": "Part-Time",
+    "Students work": "Part-Time",
+    "By contract": "By contract",
     "Job description": "Description of the position",
     "Handle customer complaints, provide appropriate solutions and alternatives...": "Handling complaints, providing appropriate solutions and alternatives...",
     "Work location": "Location of work",
@@ -421,5 +423,25 @@
     "Not important": "Not important",
     "Start typing and choose your location": "Start typing and choose your location",
     "No options": "No options",
-    "Searching": "Searching"
+    "Searching": "Searching",
+    "Short company introduction": "Short company introduction",
+    "Provide a brief introduction to your company and the role. (max. 250 characters)": "Provide a brief introduction to your company and the role. (max. 250 characters)",
+    "We are a fast-growing tech company looking for talented individuals": "We are a fast-growing tech company looking for talented individuals",
+    "Main Tasks": "Main Tasks",
+    "Describe the main tasks and responsibilities for this position": "Describe the main tasks and responsibilities for this position",
+    "Managing projects, coordinating teams, developing strategies": "Managing projects, coordinating teams, developing strategies",
+    "What We Offer": "What We Offer",
+    "Highlight the key benefits and perks offered by your company": "Highlight the key benefits and perks offered by your company",
+    "Health insurance, flexible hours, professional development": "Health insurance, flexible hours, professional development",
+    "What We Expect": "What We Expect",
+    "Outline the qualifications and skills required for this role": "Outline the qualifications and skills required for this role",
+    "3+ years of experience, excellent communication skills": "3+ years of experience, excellent communication skills",
+    "Salary Range (From)": "Salary Range (From)",
+    "Salary Range (To)": "Salary Range (To)",
+    "All salary figures should be provided as a monthly amount": "All salary figures should be provided as a gross monthly amount",
+    "All salary figures should be provided as a gross amount": "All salary figures should be provided as a gross amount",
+    "Only verified companies can post jobs on JobHuntr. Please wait until we verify you.": "Only verified companies can post jobs on JobHuntr. Please wait until we verify you.",
+    "Method of payment": "Method of payment",
+    "Save": "Save",
+    "Hourly rate": "Hourly rate"
 }
