Started work on refactoring JobCard and JobPostModal, as well as JobDescription page.

--- a/lang/en.json
+++ b/lang/en.json
@@ -447,5 +447,6 @@
     "Hourly rate": "Hourly rate",
     "Hourly": "Hourly rate",
     "Amount": "Amount",
-    "From": "From"
+    "From": "From",
+    "Starting Salary": "Starting Salary"
 }
