--- a/lang/sl.json
+++ b/lang/sl.json
@@ -447,5 +447,6 @@
     "Hourly rate": "Urna postavka",
     "Hourly": "Urna postavka",
     "Amount": "Znesek",
-    "From": "Od"
+    "From": "Od",
+    "Starting Salary": "Začetna plača"
 }
