Refactor Job components and update translations
Renamed GDPR-related files and enhanced job components by adding formatting helpers and detailed job information. Also updated Slovenian and English translations for improved consistency.

--- a/lang/en.json
+++ b/lang/en.json
@@ -448,5 +448,6 @@
     "Hourly": "Hourly rate",
     "Amount": "Amount",
     "From": "From",
-    "Starting Salary": "Starting Salary"
+    "Starting Salary": "Starting Salary",
+    "Apply now": "Apply now"
 }
