--- a/lang/sl.json
+++ b/lang/sl.json
@@ -98,6 +98,7 @@
     "Let's dive in": "Poglobimo se",
     "Company Full Name": "Polno ime podjetja",
     "Company Short Name": "Kratko ime podjetja",
+    "Company name": "Ime podjetja",
     "Company Registration House": "Registracijski organ",
     "Entity at which the company was registered (Company House for UK, Ajpes for Slovenia, etc.)": "Registracijski organ (pri katerem je bilo podjetje ustanovljeno)",
     "Company Registration Number": "Matična številka podjetja",
@@ -453,5 +454,13 @@
     "Radius": "Lokacija",
     "Show job post in the radius of :radius km": "Pokaži oglase v radiusu :radius km",
     "Show all job posts": "Pokaži vse oglase",
-    "Application deadline": "Rok za prijavo"
+    "Application deadline": "Rok za prijavo",
+    "Dashboard": "Nadzorna plošča",
+    "Add a company": "Dodaj podjetje",
+    "My companies": "Moja podjetja",
+    "Company already exists in our database.": "Podjetje že obstaja v naši podatkovni bazi.",
+    "Welcome aboard. Your account has been partially created. Please finish your registration by clicking the button below.": "Dobrodošli na JobHunterju. Vaš račun je bil delno ustvarjen. Prosimo, zaključite registracijo s klikom na spodnji gumb.",
+    "Complete registration": "Popolna registracija",
+    "If this was not you, please contact us, to delete your account.": "Če to niste bili vi, se obrnite na nas, da izbrišemo vaš račun.",
+    "We are thrilled to have you on board and we can't wait to help you reach more people!": "Navdušeni smo, da ste zraven, in komaj čakamo, da vam pomagamo doseči več ljudi!"
 }
